--- a/BULLDOZER PRICES.ipynb
+++ b/BULLDOZER PRICES.ipynb
@@ -2340,6 +2340,220 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# FILL MISSING VALUES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SalesID\n",
+      "SalePrice\n",
+      "MachineID\n",
+      "ModelID\n",
+      "datasource\n",
+      "auctioneerID\n",
+      "YearMade\n",
+      "MachineHoursCurrentMeter\n",
+      "saleYear\n",
+      "saleMonth\n",
+      "saleDay\n",
+      "saleDayOfWeek\n",
+      "saleDayOfYear\n"
+     ]
+    }
+   ],
+   "source": [
+    "for label, content in df_tmp.items():\n",
+    "    if pd.api.types.is_numeric_dtype(content):\n",
+    "        print(label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "auctioneerID\n",
+      "MachineHoursCurrentMeter\n"
+     ]
+    }
+   ],
+   "source": [
+    "for label, content in df_tmp.items():\n",
+    "    if pd.api.types.is_numeric_dtype(content):\n",
+    "        if pd.isnull(content).sum():\n",
+    "            print(label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fill numeric rows with the median\n",
+    "for label, content in df_tmp.items():\n",
+    "    if pd.api.types.is_numeric_dtype(content):\n",
+    "        if pd.isnull(content).sum():\n",
+    "            # Add a binary column which tells if the data was missing our not\n",
+    "            df_tmp[label+\"_is_missing\"] = pd.isnull(content)\n",
+    "            # Fill missing numeric values with median since it's more robust than the mean\n",
+    "            df_tmp[label] = content.fillna(content.median())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check if there's any null values\n",
+    "for label, content in df_tmp.items():\n",
+    "    if pd.api.types.is_numeric_dtype(content):\n",
+    "        if pd.isnull(content).sum():\n",
+    "            print(label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False    392562\n",
+       "True      20136\n",
+       "Name: auctioneerID_is_missing, dtype: int64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check to see how many examples were missing\n",
+    "df_tmp.auctioneerID_is_missing.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "UsageBand\n",
+      "fiModelDesc\n",
+      "fiBaseModel\n",
+      "fiSecondaryDesc\n",
+      "fiModelSeries\n",
+      "fiModelDescriptor\n",
+      "ProductSize\n",
+      "fiProductClassDesc\n",
+      "state\n",
+      "ProductGroup\n",
+      "ProductGroupDesc\n",
+      "Drive_System\n",
+      "Enclosure\n",
+      "Forks\n",
+      "Pad_Type\n",
+      "Ride_Control\n",
+      "Stick\n",
+      "Transmission\n",
+      "Turbocharged\n",
+      "Blade_Extension\n",
+      "Blade_Width\n",
+      "Enclosure_Type\n",
+      "Engine_Horsepower\n",
+      "Hydraulics\n",
+      "Pushblock\n",
+      "Ripper\n",
+      "Scarifier\n",
+      "Tip_Control\n",
+      "Tire_Size\n",
+      "Coupler\n",
+      "Coupler_System\n",
+      "Grouser_Tracks\n",
+      "Hydraulics_Flow\n",
+      "Track_Type\n",
+      "Undercarriage_Pad_Width\n",
+      "Stick_Length\n",
+      "Thumb\n",
+      "Pattern_Changer\n",
+      "Grouser_Type\n",
+      "Backhoe_Mounting\n",
+      "Blade_Type\n",
+      "Travel_Controls\n",
+      "Differential_Type\n",
+      "Steering_Controls\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "# Check columns which *aren't* numeric\n",
+    "for label, content in df_tmp.items():\n",
+    "    if not pd.api.types.is_numeric_dtype(content):\n",
+    "        print(label)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " # Turn categorical variables into numbers\n",
+    "for label, content in df_tmp.items():\n",
+    "    # Check columns which *aren't* numeric\n",
+    "    if not pd.api.types.is_numeric_dtype(content):\n",
+    "        # Add binary column to inidicate whether sample had missing value\n",
+    "        df_tmp[label+\"_is_missing\"] = pd.isnull(content)\n",
+    "        # We add the +1 because pandas encodes missing categories as -1\n",
+    "        df_tmp[label] = pd.Categorical(content).codes+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 412698 entries, 0 to 412697\n",
+      "Columns: 103 entries, SalesID to Steering_Controls_is_missing\n",
+      "dtypes: bool(46), float64(3), int16(4), int64(10), int8(40)\n",
+      "memory usage: 77.9 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_tmp.info()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
