--- a/BULLDOZER PRICES.ipynb
+++ b/BULLDOZER PRICES.ipynb
@@ -2555,10 +2555,573 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SalesID                         0\n",
+       "SalePrice                       0\n",
+       "MachineID                       0\n",
+       "ModelID                         0\n",
+       "datasource                      0\n",
+       "                               ..\n",
+       "Backhoe_Mounting_is_missing     0\n",
+       "Blade_Type_is_missing           0\n",
+       "Travel_Controls_is_missing      0\n",
+       "Differential_Type_is_missing    0\n",
+       "Steering_Controls_is_missing    0\n",
+       "Length: 103, dtype: int64"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_tmp.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 4min 4s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(n_jobs=-1)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Instantiate model\n",
+    "model = RandomForestRegressor(n_jobs=-1)\n",
+    "\n",
+    "# Fit the model\n",
+    "model.fit(df_tmp.drop(\"SalePrice\", axis=1), df_tmp.SalePrice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.987583339567058"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Score the model\n",
+    "model.score(df_tmp.drop(\"SalePrice\", axis=1), df_tmp.SalePrice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SalesID</th>\n",
+       "      <th>SalePrice</th>\n",
+       "      <th>MachineID</th>\n",
+       "      <th>ModelID</th>\n",
+       "      <th>datasource</th>\n",
+       "      <th>auctioneerID</th>\n",
+       "      <th>YearMade</th>\n",
+       "      <th>MachineHoursCurrentMeter</th>\n",
+       "      <th>UsageBand</th>\n",
+       "      <th>fiModelDesc</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Undercarriage_Pad_Width_is_missing</th>\n",
+       "      <th>Stick_Length_is_missing</th>\n",
+       "      <th>Thumb_is_missing</th>\n",
+       "      <th>Pattern_Changer_is_missing</th>\n",
+       "      <th>Grouser_Type_is_missing</th>\n",
+       "      <th>Backhoe_Mounting_is_missing</th>\n",
+       "      <th>Blade_Type_is_missing</th>\n",
+       "      <th>Travel_Controls_is_missing</th>\n",
+       "      <th>Differential_Type_is_missing</th>\n",
+       "      <th>Steering_Controls_is_missing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1646770</td>\n",
+       "      <td>9500.0</td>\n",
+       "      <td>1126363</td>\n",
+       "      <td>8434</td>\n",
+       "      <td>132</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>1974</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4593</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1821514</td>\n",
+       "      <td>14000.0</td>\n",
+       "      <td>1194089</td>\n",
+       "      <td>10150</td>\n",
+       "      <td>132</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1820</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1505138</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>1473654</td>\n",
+       "      <td>4139</td>\n",
+       "      <td>132</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>1978</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2348</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1671174</td>\n",
+       "      <td>16000.0</td>\n",
+       "      <td>1327630</td>\n",
+       "      <td>8591</td>\n",
+       "      <td>132</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1819</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1329056</td>\n",
+       "      <td>22000.0</td>\n",
+       "      <td>1336053</td>\n",
+       "      <td>4089</td>\n",
+       "      <td>132</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>1984</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2119</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 103 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   SalesID  SalePrice  MachineID  ModelID  datasource  auctioneerID  YearMade  \\\n",
+       "0  1646770     9500.0    1126363     8434         132          18.0      1974   \n",
+       "1  1821514    14000.0    1194089    10150         132          99.0      1980   \n",
+       "2  1505138    50000.0    1473654     4139         132          99.0      1978   \n",
+       "3  1671174    16000.0    1327630     8591         132          99.0      1980   \n",
+       "4  1329056    22000.0    1336053     4089         132          99.0      1984   \n",
+       "\n",
+       "   MachineHoursCurrentMeter  UsageBand  fiModelDesc  ...  \\\n",
+       "0                       0.0          0         4593  ...   \n",
+       "1                       0.0          0         1820  ...   \n",
+       "2                       0.0          0         2348  ...   \n",
+       "3                       0.0          0         1819  ...   \n",
+       "4                       0.0          0         2119  ...   \n",
+       "\n",
+       "   Undercarriage_Pad_Width_is_missing  Stick_Length_is_missing  \\\n",
+       "0                                True                     True   \n",
+       "1                                True                     True   \n",
+       "2                                True                     True   \n",
+       "3                                True                     True   \n",
+       "4                                True                     True   \n",
+       "\n",
+       "   Thumb_is_missing  Pattern_Changer_is_missing  Grouser_Type_is_missing  \\\n",
+       "0              True                        True                     True   \n",
+       "1              True                        True                     True   \n",
+       "2              True                        True                     True   \n",
+       "3              True                        True                     True   \n",
+       "4              True                        True                     True   \n",
+       "\n",
+       "   Backhoe_Mounting_is_missing  Blade_Type_is_missing  \\\n",
+       "0                        False                  False   \n",
+       "1                         True                   True   \n",
+       "2                        False                  False   \n",
+       "3                         True                   True   \n",
+       "4                        False                  False   \n",
+       "\n",
+       "   Travel_Controls_is_missing  Differential_Type_is_missing  \\\n",
+       "0                       False                          True   \n",
+       "1                        True                         False   \n",
+       "2                       False                          True   \n",
+       "3                        True                         False   \n",
+       "4                       False                          True   \n",
+       "\n",
+       "   Steering_Controls_is_missing  \n",
+       "0                          True  \n",
+       "1                         False  \n",
+       "2                          True  \n",
+       "3                         False  \n",
+       "4                          True  \n",
+       "\n",
+       "[5 rows x 103 columns]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_tmp.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2009    43849\n",
+       "2008    39767\n",
+       "2011    35197\n",
+       "2010    33390\n",
+       "2007    32208\n",
+       "2006    21685\n",
+       "2005    20463\n",
+       "2004    19879\n",
+       "2001    17594\n",
+       "2000    17415\n",
+       "2002    17246\n",
+       "2003    15254\n",
+       "1998    13046\n",
+       "1999    12793\n",
+       "2012    11573\n",
+       "1997     9785\n",
+       "1996     8829\n",
+       "1995     8530\n",
+       "1994     7929\n",
+       "1993     6303\n",
+       "1992     5519\n",
+       "1991     5109\n",
+       "1989     4806\n",
+       "1990     4529\n",
+       "Name: saleYear, dtype: int64"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_tmp.saleYear.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(11573, 401125)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Split data into training and validation\n",
+    "df_val = df_tmp[df_tmp.saleYear == 2012]\n",
+    "df_train = df_tmp[df_tmp.saleYear != 2012]\n",
+    "\n",
+    "len(df_val), len(df_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((401125, 102), (401125,), (11573, 102), (11573,))"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Split data into X & y\n",
+    "X_train, y_train = df_train.drop(\"SalePrice\", axis=1), df_train.SalePrice\n",
+    "X_valid, y_valid = df_val.drop(\"SalePrice\", axis=1), df_val.SalePrice\n",
+    "\n",
+    "X_train.shape, y_train.shape, X_valid.shape, y_valid.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# \n",
+    "Building an evaluation function\n",
+    "\n",
+    "According to Kaggle for the Bluebook for Bulldozers competition, the evaluation function they use is root mean squared log error (RMSLE).\n",
+    "\n",
+    "RMSLE = generally you don't care as much if you're off by $10 as much as you'd care if you were off by 10%, you care more about ratios rather than differences. MAE (mean absolute error) is more about exact differences.\n",
+    "\n",
+    "It's important to understand the evaluation metric you're going for.\n",
+    "\n",
+    "Since Scikit-Learn doesn't have a function built-in for RMSLE, we'll create our own.\n",
+    "\n",
+    "We can do this by taking the square root of Scikit-Learn's mean_squared_log_error (MSLE). MSLE is the same as taking the log of mean squared error (MSE).\n",
+    "\n",
+    "We'll also calculate the MAE and R^2 for fun.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create evaluation function (the competition uses Root Mean Square Log Error)\n",
+    "from sklearn.metrics import mean_squared_log_error, mean_absolute_error\n",
+    "\n",
+    "def rmsle(y_test, y_preds):\n",
+    "    return np.sqrt(mean_squared_log_error(y_test, y_preds))\n",
+    "\n",
+    "# Create function to evaluate our model\n",
+    "def show_scores(model):\n",
+    "    train_preds = model.predict(X_train)\n",
+    "    val_preds = model.predict(X_valid)\n",
+    "    scores = {\"Training MAE\": mean_absolute_error(y_train, train_preds),\n",
+    "              \"Valid MAE\": mean_absolute_error(y_valid, val_preds),\n",
+    "              \"Training RMSLE\": rmsle(y_train, train_preds),\n",
+    "              \"Valid RMSLE\": rmsle(y_valid, val_preds),\n",
+    "              \"Training R^2\": model.score(X_train, y_train),\n",
+    "              \"Valid R^2\": model.score(X_valid, y_valid)}\n",
+    "    return scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing our model on a subset (to tune the hyperparameters)\n",
+    "\n",
+    "Retraing an entire model would take far too long to continuing experimenting as fast as we want to.\n",
+    "\n",
+    "So what we'll do is take a sample of the training set and tune the hyperparameters on that before training a larger model.\n",
+    "\n",
+    "If you're experiments are taking longer than 10-seconds (give or take how long you have to wait), you should be trying to speed things up. You can speed things up by sampling less data or using a faster computer.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "401125"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change max samples in RandomForestRegressor\n",
+    "model = RandomForestRegressor(n_jobs=-1,\n",
+    "                              max_samples=10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 7.16 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(max_samples=10000, n_jobs=-1)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Cutting down the max number of samples each tree can see improves training time\n",
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Training MAE': 5557.619267535058,\n",
+       " 'Valid MAE': 7131.132364987471,\n",
+       " 'Training RMSLE': 0.2577492465676333,\n",
+       " 'Valid RMSLE': 0.2925543232561469,\n",
+       " 'Training R^2': 0.8607064100801327,\n",
+       " 'Valid R^2': 0.8334157942232461}"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "show_scores(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "Hyperparameter tuning with RandomizedSearchCV\n",
+    "\n",
+    "You can increase n_iter to try more combinations of hyperparameters but in our case, we'll try 20 and see where it gets us.\n",
+    "\n",
+    "Remember, we're trying to reduce the amount of time it takes between experiments.\n"
+   ]
   }
  ],
  "metadata": {
